created grid setup

--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 #container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 400px;
     height: 400px;
+}
+.grid-square {
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    flex: 0 0 25px;
 }
